Fix for commit 755f7c6b7b23c0c4a727cb745263282237e8c61a. Styling input field was making other text invisible.

--- a/css-1.5.2/style.css
+++ b/css-1.5.2/style.css
@@ -1603,7 +1603,7 @@ table.table-census-assistant th {font-weight: bold;text-align: left}
 #edit_interface-page .cens_data input {background-color:#FFFFDE !important;font-size:12px !important}
 
 /* Add media popup */
-#addmedia-page input{color:#e2e2e2;font-size:11px}
+#addmedia-page input[type=file]{color:#e2e2e2;font-size:11px}
 
 /* Historical Facts */
 label[for=checkbox_histo]{font-size:11px}
